--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     border: 10px solid grey;
     font-family: sans-serif;
     border-collapse: collapse;
-    margin: 0 auto;
+    margin: 0;
   }
 
   #display{
@@ -24,7 +24,7 @@
     height: 50px;
     border: none;
     text-align: right;
-    background-color: inherit;
+    /*background-color: inherit;*/
   }
 
   tr, th, td{
